--- a/templates/default/nvm.sh.erb
+++ b/templates/default/nvm.sh.erb
@@ -1,5 +1,5 @@
 <% if @user_install %>
   [ -f ${HOME}/.nvm/nvm.sh ] && . ${HOME}/.nvm/nvm.sh
 <% else %>
-[ -f /usr/local/src/nvm/nvm.sh ] && . /usr/local/src/nvm/nvm.sh
+[ -f <%= node['nvm']['directory'] %>/nvm.sh ] && . <%= node['nvm']['directory'] %>/nvm.sh
 <% end %>
